--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
-  <link href="normalize.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <link rel="icon" href="favicon-32.ico">
   <link rel="icon" href="img/favicon-32.svg" type="image/svg+xml">
@@ -37,26 +36,26 @@
         </div>
         <nav class="site-navigation">
           <ul class="site-navigation__list">
-            <li class="site-navigation__item">
-              <a class="site-navigation__link" href="./catalog.html">Каталог товаров</a>
+            <li class="site-navigation__item site-navigation__item--catalog">
+              <a class="site-navigation__link site-navigation__link--catalog" href="./catalog.html">Каталог товаров</a>
               <ul class="site-navigation__catalog catalog-menu">
                 <li class="catalog-menu__item">
                   <a class="catalog-menu__link" href="#">Виртуальная реальность</a>
                 </li>
                 <li class="catalog-menu__item">
-                  <a class="catalog-menu__link" href="./catalog.html">Моноподы для селфи</a>
-                </li>
-                <li class="catalog-menu__item">
-                  <a class="catalog-menu__link" href="#">Экшн-камеры</a>
-                </li>
-                <li class="catalog-menu__item">
                   <a class="catalog-menu__link" href="#">Фитнес-браслеты</a>
+                </li>
+                <li class="catalog-menu__item">
+                  <a class="catalog-menu__link" href="#">Квадрокоптер</a>
+                </li>
+                <li class="catalog-menu__item">
+                  <a class="catalog-menu__link" href="./catalog.html">Моноподы для селфи</a>
                 </li>
                 <li class="catalog-menu__item">
                   <a class="catalog-menu__link" href="#">Умные часы</a>
                 </li>
                 <li class="catalog-menu__item">
-                  <a class="catalog-menu__link" href="#">Квадрокоптер</a>
+                  <a class="catalog-menu__link" href="#">Экшн-камеры</a>
                 </li>
               </ul>
             </li>
@@ -213,46 +212,48 @@
     </div>
     <section class="page-main__information information">
       <div class="wrapper">
-        <h2 class="visually-hidden">Информация</h2>
-        <ul class="information__list">
-          <li class="information__item">
-            <button class="information__button button button--bg-yellow" type="button"><span class="button__span">Доставка</span></button>
-          </li>
-          <li class="information__item">
-            <button class="information__button button button--bg-yellow" type="button"><span class="button__span">Гарантия</span></button>
-          </li>
-          <li class="information__item">
-            <button class="information__button button button--bg-yellow" type="button"><span class="button__span">Кредит</span></button>
-          </li>
-        </ul>
-        <section class="information__container">
-          <h2 class="information__title title title--bold">
-            Доставка
-          </h2>
-          <p class="information__paragraph">
-            Мы с удовольствием доставим ваш товар прямо к вашему
-            подъезду совершенно бесплатно!
-            Ведь мы неплохо заработаем, поднимая его на ваш этаж.
-          </p>
-        </section>
-        <section class="information__container">
-          <h2 class="information__title title title--bold">
-            Гарантия
-          </h2>
-          <p class="information__paragraph">
-            Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте,
-            мы выдадим вам новый. Товар, не дом, конечно же.
-          </p>
-        </section>
-        <section class="information__container">
-          <h2 class="information__title title title--bold">
-            Кредит
-          </h2>
-          <p class="information__title">
-            Залезть в долговую яму стало проще! Кредитные консультанты подберут
-            для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.
-          </p>
-        </section>
+        <div class="information__wrapper">
+          <h2 class="visually-hidden">Информация</h2>
+          <ul class="information__list">
+            <li class="information__item">
+              <button class="information__button button button--bg-yellow" type="button"><span class="button__span">Доставка</span></button>
+            </li>
+            <li class="information__item">
+              <button class="information__button button button--bg-yellow" type="button"><span class="button__span">Гарантия</span></button>
+            </li>
+            <li class="information__item">
+              <button class="information__button button button--bg-yellow" type="button"><span class="button__span">Кредит</span></button>
+            </li>
+          </ul>
+          <section class="information__container">
+            <h2 class="information__title title title--bold">
+              Доставка
+            </h2>
+            <p class="information__paragraph">
+              Мы с удовольствием доставим ваш товар прямо к вашему
+              подъезду совершенно бесплатно!
+              Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+            </p>
+          </section>
+          <section class="information__container">
+            <h2 class="information__title title title--bold">
+              Гарантия
+            </h2>
+            <p class="information__paragraph">
+              Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте,
+              мы выдадим вам новый. Товар, не дом, конечно же.
+            </p>
+          </section>
+          <section class="information__container">
+            <h2 class="information__title title title--bold">
+              Кредит
+            </h2>
+            <p class="information__title">
+              Залезть в долговую яму стало проще! Кредитные консультанты подберут
+              для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.
+            </p>
+          </section>
+        </div>
       </div>
     </section>
     <div class="wrapper">
@@ -275,7 +276,7 @@
       </section>
       <div class="page-main__container">
         <section class="page-main__description description">
-          <h2 class="description__title title title--bold">О нас</h2>
+          <h2 class="page-main__title description__title title title--bold">О нас</h2>
           <p class="description__paragraph">
             Огромный выбор гаджетов не оставит равнодушным гика,
             который есть в каждом из нас.
@@ -292,7 +293,7 @@
           <button class="description__button button button--bg-yellow"><span class="button__span">подробнее о нас</span></button>
         </section>
         <section class="page-main__contacts contacts">
-          <h2 class="contacts__title title title--bold">Контакты</h2>
+          <h2 class="page-main__title contacts__title title title--bold">Контакты</h2>
           <p class="contacts__paragraph">
             Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете
             проверить работоспособность покупки. Всякое бывает.
@@ -338,7 +339,7 @@
             реки Карповки, 5, литера П.
           </p>
         </section>
-        <section class="footer-information__container">
+        <section class="footer-information__section">
           <h2 class="visually-hidden">Информация</h2>
           <ul class="footer-information__list">
             <li class="footer-information__item">
