Добавляет слайдер первый, дорабатывает меню

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
       <section class="page-main__slider slider">
         <h2 class="visually-hidden">Слайдер с товарами</h2>
         <div class="slider__button slider-button">
-          <button class="slider-button__toggle" type="button"></button>
-          <button class="slider-button__toggle" type="button"></button>
-          <button class="slider-button__toggle" type="button"></button>
+          <button class="slider-button__toggle" type="button" aria-label="Первый слайд"></button>
+          <button class="slider-button__toggle" type="button" aria-label="Второй слайд"></button>
+          <button class="slider-button__toggle slider-button__toggle--current" type="button" aria-label="Третий слайд"></button>
         </div>
         <div class="slider__inner slider-main">
-          <section class="slider-main__container">
-            <img class="slider-main__img" src="img/slider-3.png" alt="Квадрокоптер" width="384" height="486">
+          <section class="slider-main__container slider-main__container--current-1">
+            <img class="slider-main__img" src="img/slider-3.png" alt="Квадрокоптер" width="526" height="334">
             <div class="slider-main__inner">
               <h3 class="slider-main__title title title--bold">
                 Порхает как бабочка, жалит как пчела!
@@ -109,11 +109,11 @@
               </table>
             </div>
           </section>
-          <section class="slider-main__container">
-            <img class="slider-main__img" src="img/slider-2.png" alt="Фитнес-браслет" width="345" height="485">
+          <section class="slider-main__container slider-main__container--current slider-main__container--current-2">
+            <img class="slider-main__img slider-main__img--braslett" src="img/slider-2.png" alt="Фитнес-браслет" width="345" height="485">
             <div class="slider-main__inner">
               <h3 class="slider-main__title title title--bold">
-                Худеем правильно!
+                Худеем <br> правильно!
               </h3>
               <p class="slider-main__paragraph">
                 Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
@@ -129,14 +129,14 @@
               </table>
             </div>
           </section>
-          <section class="slider-main__container">
+          <section class="slider-main__container slider-main__container--current-3">
             <img class="slider-main__img" src="img/slider-1.png" alt="Монопод для селфи" width="384" height="486">
             <div class="slider-main__inner">
               <h3 class="slider-main__title title title--bold">
-                Делай селфи, как Бен Стиллер!
+                Делай селфи, <br> как Бен Стиллер!
               </h3>
               <p class="slider-main__paragraph">
-                Самая длинная палка для селфи доступна в нашем магазине.
+                Самая длинная палка для селфи доступна в нашем магазине.<br>
                 Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
               </p>
               <button class="slider-main__button button button--bg-yellow"> <span class="button__span">подробнее</span></button>
