Делает кроссбраузерность, Пиксель перфект, попап и карту интерактивную
Привет) У меня проблема с интерактивной картой и обычной. При отключении интерактивной карты - кнопка прыгает на картинку (так как картинка абсолют). Что то не могу сообразить что сделать.
И с попапом карты косяк. На интерактивную карту почему то если нажать - попап не открывается. А если на картинку нажать - то открывается.

И еще тупой вопросЮ На главной странице где 6 иконок с товарами, как сделать "фитнес-браслет" в одну строчку? уже все перепробовала....

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
-  <link href="style.css" rel="stylesheet">
+  <link href="./normalize.css" rel="stylesheet" >
+  <link href="./style.css" rel="stylesheet">
   <link rel="icon" href="favicon-32.ico">
   <link rel="icon" href="img/favicon-32.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon-180.png">
@@ -17,7 +18,7 @@
       <a href="./index.html" class="page-header__logo">
         <img src="img/logo.svg" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
       </a>
-      <div class="page-header__navigation">
+      <div class="page-header__navigation page-header__navigation--catalog">
         <div class="main-navigation">
           <form class="main-navigation__form" action="https://echo.htmlacademy.ru" method="post" name="search-form">
             <label for="user-search" class="visually-hidden">Поиск по сайту</label>
@@ -226,7 +227,7 @@
                       <div class="items__block">
                         <h3 class="items__title">
                           <a class="items__link" href="#">
-                            Профессиональная селфи-палка
+                            Профессиональная <br>селфи-палка
                           </a>
                         </h3>
                         <span class="items__span">1 500 руб.</span>
@@ -248,7 +249,7 @@
                       <div class="items__block">
                         <h3 class="items__title">
                           <a class="items__link" href="#">
-                            Непотопляемая селфи-палка
+                            Непотопляемая <br>селфи-палка
                           </a>
                         </h3>
                         <span class="items__span">1 500 руб.</span>
@@ -270,7 +271,7 @@
                       <div class="items__block">
                         <h3 class="items__title">
                           <a class="items__link" href="#">
-                            Селфи-палка «Следуй за мной»
+                            Селфи-палка «Следуй за <br> мной»
                           </a>
                         </h3>
                         <span class="items__span">1 900 руб.</span>
