--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
-  <link href="style.css" rel="stylesheet">
+  <link href="./normalize.css" rel="stylesheet">
+  <link href="./style.css" rel="stylesheet">
   <link rel="icon" href="favicon-32.ico">
   <link rel="icon" href="img/favicon-32.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon-180.png">
@@ -81,12 +82,12 @@
       <section class="page-main__slider slider">
         <h2 class="visually-hidden">Слайдер с товарами</h2>
         <div class="slider__button slider-button">
-          <button class="slider-button__toggle" type="button" aria-label="Первый слайд"></button>
+          <button class="slider-button__toggle slider-button__toggle--current" type="button" aria-label="Первый слайд"></button>
           <button class="slider-button__toggle" type="button" aria-label="Второй слайд"></button>
-          <button class="slider-button__toggle slider-button__toggle--current" type="button" aria-label="Третий слайд"></button>
+          <button class="slider-button__toggle" type="button" aria-label="Третий слайд"></button>
         </div>
         <div class="slider__inner slider-main">
-          <section class="slider-main__container">
+          <section class="slider-main__container slider-main__container--current">
             <img class="slider-main__img" src="img/slider-3.png" alt="Квадрокоптер" width="526" height="334">
             <div class="slider-main__inner">
               <h3 class="slider-main__title title title--bold">
@@ -116,7 +117,7 @@
                 Худеем <br> правильно!
               </h3>
               <p class="slider-main__paragraph">
-                Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+                Мотивирующие фитнес-браслеты помогут найти в себе силы <br> не пропускать занятия и соблюдать диету.
               </p>
               <button class="slider-main__button button button--bg-yellow"><span class="button__span">подробнее</span></button>
               <table class="slider-main__tablet slider-tablet">
@@ -129,7 +130,7 @@
               </table>
             </div>
           </section>
-          <section class="slider-main__container slider-main__container--current">
+          <section class="slider-main__container">
             <img class="slider-main__img" src="img/slider-1.png" alt="Монопод для селфи" width="384" height="486">
             <div class="slider-main__inner">
               <h3 class="slider-main__title title title--bold">
@@ -172,7 +173,7 @@
               <div class="catalog__inner catalog__inner--monopod">
                 <img class="catalog__img" src="img/monopod.svg" alt="Моноподы для селфи" width="86" height="117">
               </div>
-              <span class="catalog__text">Моноподы для селфи</span>
+              <span class="catalog__text">Моноподы <br>для селфи</span>
             </a>
           </li>
           <li class="catalog__item">
@@ -240,7 +241,7 @@
               Гарантия
             </h2>
             <p class="information__paragraph">
-              Если из-за возгорания купленного у нас товара у вас сгорит дом — <br>не переживайте,
+              Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте,
               мы выдадим вам новый.<br> Товар, не дом, конечно же.
             </p>
           </section>
@@ -300,9 +301,10 @@
           </p>
           <div class="contacts__map">
             <h3 class="visually-hidden">Карта</h3>
-            <img src="img/map-1.png" alt="Карта" width="560" height="222">
+            <iframe class="contacts__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8180266209306!2d30.31518695149336!3d59.96834198179811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696315bc4e8ce61%3A0x74d4f0cbfe1fd995!2z0L3QsNCxLiBQ0LXQutC4INCa0LDRgNC_0L7QstC60LgsIDUg0LrQvtGA0L_Rg9GBINCfLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTk3MDIy!5e0!3m2!1sru!2sru!4v1624999629290!5m2!1sru!2sru" width="560" height="222" style="border:0;" allowfullscreen=""></iframe>
+            <img class="contacts__img" src="img/map-1.png" alt="набережная реки Карповки 5 корпус П, Санкт-Петербург" width="560" height="222">
           </div>
-          <button class="contacts__button button button--bg-yellow"><span class="button__span">напишите нам</span></button>
+          <a class="contacts__button button button--bg-yellow" href="form.html"><span class="button__span">напишите нам</span></a>
         </section>
       </div>
     </div>
@@ -310,7 +312,7 @@
   <footer class="page-footer">
     <div class="wrapper">
       <div class="page-footer__navigation footer-navigation">
-        <a class="footer-navigation__logo" href="./index.html">
+        <a class="footer-navigation__logo">
           <img src="img/logo-yellow.svg" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
         </a>
         <ul class="footer-navigation__list">
@@ -408,6 +410,16 @@
         </p>
         <button class="modal__submit-button button button--bg-yellow" type="submit">Отправить</button>
       </form>
+    </section>
+  </div>
+  <div class="modal-map">
+    <section class="modal-map__container">
+      <button class="modal-map__button button" type="button">
+        <span class="visually-hidden">Закрыть</span>
+      </button>
+      <h2 class="visually-hidden">Карта</h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8180266209306!2d30.31518695149336!3d59.96834198179811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696315bc4e8ce61%3A0x74d4f0cbfe1fd995!2z0L3QsNCxLiBQ0LXQutC4INCa0LDRgNC_0L7QstC60LgsIDUg0LrQvtGA0L_Rg9GBINCfLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTk3MDIy!5e0!3m2!1sru!2sru!4v1624999629290!5m2!1sru!2sru" width="960" height="573" style="border:0;" allowfullscreen=""></iframe>
+      <img class="modal-map__img" src="img/map-big.png" alt="набережная реки Карповки 5 корпус П, Санкт-Петербург" width="960" height="573">
     </section>
   </div>
   <script src="./js/script.js"></script>
