--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
   <link href="./normalize.css" rel="stylesheet">
-  <link href="./style.css" rel="stylesheet">
+  <link href="./min.style.css" rel="stylesheet">
   <link rel="icon" href="favicon-32.ico">
   <link rel="icon" href="img/favicon-32.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon-180.png">
@@ -131,7 +131,7 @@
             </div>
           </section>
           <section class="slider-main__container">
-            <img class="slider-main__img" src="img/slider-1.png" alt="Монопод для селфи" width="384" height="486">
+            <img class="slider-main__img slider-main__img--monopod" src="img/slider-1.png" alt="Монопод для селфи" width="384" height="486">
             <div class="slider-main__inner">
               <h3 class="slider-main__title title title--bold">
                 Делай селфи, <br> как Бен Стиллер!
