--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
   <link href="./normalize.css" rel="stylesheet" >
-  <link href="./min.style.css" rel="stylesheet">
+  <link href="./style.css" rel="stylesheet">
   <link rel="icon" href="favicon-32.ico">
   <link rel="icon" href="img/favicon-32.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon-180.png">
