--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
-  <link href="./normalize.css" rel="stylesheet">
-  <link href="./style.css" rel="stylesheet">
+  <link href="./css/normalize.css" rel="stylesheet">
+  <link href="./css/min.style.css" rel="stylesheet">
   <link rel="icon" href="favicon-32.ico">
   <link rel="icon" href="img/favicon-32.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon-180.png">
@@ -378,7 +378,7 @@
             </li>
           </ul>
         </section>
-        <a class="social__link-html" href="https://htmlacademy.ru">
+        <a class="social__link-html" href="https://htmlacademy.ru/intensive/htmlcss">
           <span class="visually-hidden">HTML Academy</span>
           <img src="img/logo_htmlacademy.svg" alt="Логотип HTML Academy" width="115" height="33">
         </a>
@@ -417,7 +417,7 @@
       <img class="modal-map__img" src="img/map-big.png" alt="набережная реки Карповки 5 корпус П, Санкт-Петербург" width="960" height="573">
     </section>
   </div>
-  <script src="./js/script.js"></script>
+  <script src="./js/min.script.js"></script>
 </body>
 
 </html>
